# fmp-data

./: .coderabbit.yaml  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  ENDPOINTS.MD  LLM.md  MISSING_ENDPOINTS.md  Makefile  Makefile.dev  README.md  codecov.yml  mkdocs.yml  mypy.ini  noxfile.py  pyproject.toml  pytest.ini
.github/: dependabot.yml
.github/workflows/: check-label-logic.yml  ci-cd.yml  ci.yml  claude-code-review.yml  claude.yml  dev-release.yml  docs.yml  document.yml  guard-main-origin.yml  lint.yml  pr-tests.yml  pr.yml  publish-pypi.yml  publish-testpypi.yml  rebase-reminder.yml  release-pr.yml  release.yml  sync-main-to-dev.yml  test-release.yml  test.yml
docs/: index.md  mcp_tools_reference.md
docs/api/: endpoints.md  reference.md
docs/contributing/: development.md  index.md  reference.md  releasing.md  testing.md  workflow.md
docs/mcp/: claude_desktop.md  configurations.md  index.md  tools.md  troubleshooting.md
examples/: MCP_SETUP_GUIDE.md  README.md  __init__.py  example.py  historical_prices.py  market.py  mcp_server.py
examples/basic/: company_info.py  historical_prices.py  market.py
examples/batch_operations/: multi_symbol_quotes.py
examples/claude_desktop_setup/: README.md  claude_desktop_config_advanced.json  quick_start.bat  setup_claude_desktop.py  test_config.json  troubleshooting.md
examples/fundamental_analysis/: financial_statements.py
examples/index_tracking/: index_constituents.py
examples/mcp/: server.py  setup_guide.md
examples/mcp/claude_desktop/: claude_desktop_config.json  quick_start.sh  setup_claude_desktop.py  test_config.json
examples/mcp/configurations/: crypto_manifest.py  research_manifest.py
examples/mcp_configurations/: README.md  minimal_manifest.py  trading_manifest.py
examples/sec_filings/: filings_search.py
examples/technical_analysis/: indicators.py
examples/transcripts/: earnings_calls.py
examples/workflows/: portfolio_analysis.py
fmp_data/: __init__.py  async_client.py  base.py  client.py  config.py  exceptions.py  helpers.py  logger.py  models.py  rate_limit.py  schema.py
fmp_data/alternative/: async_client.py  client.py  endpoints.py  mapping.py  models.py  schema.py  validation.py
fmp_data/batch/: __init__.py  _csv_utils.py  async_client.py  client.py  endpoints.py  models.py
fmp_data/bulk/: __init__.py  client.py  endpoints.py  models.py
fmp_data/company/: __init__.py  async_client.py  client.py  endpoints.py  mapping.py  models.py  schema.py  validation.py
fmp_data/economics/: __init__.py  async_client.py  client.py  endpoints.py  mapping.py  models.py  schema.py  validation.py
fmp_data/endpoints/: __init__.py  definitions.py
fmp_data/fundamental/: __init__.py  async_client.py  client.py  endpoints.py  mapping.py  models.py  schema.py  validation.py
fmp_data/index/: __init__.py  async_client.py  models.py
fmp_data/institutional/: __init__.py  async_client.py  client.py  endpoints.py  mapping.py  models.py  schema.py  validation.py
fmp_data/intelligence/: __init__.py  async_client.py  client.py  endpoints.py  mapping.py  models.py  schema.py  validation.py
fmp_data/investment/: __init__.py  async_client.py  client.py  endpoints.py  mapping.py  models.py  schema.py  validation.py
fmp_data/lc/: __init__.py  base.py  config.py  embedding.py  manager.py  mapping.py  models.py  registry.py  setup.py  utils.py  validation.py  vector_store.py
fmp_data/market/: __init__.py  async_client.py  client.py  endpoints.py  mapping.py  models.py  schema.py  validation.py
fmp_data/mcp/: __main__.py  discovery.py  server.py  setup.py  tool_loader.py  tools_manifest.py  utils.py
fmp_data/sec/: __init__.py  async_client.py  client.py  endpoints.py  models.py
fmp_data/technical/: async_client.py  client.py  endpoints.py  mapping.py  models.py  schema.py  validation.py
fmp_data/transcripts/: __init__.py  async_client.py  client.py  endpoints.py  models.py
fmp_data/utils/: __init__.py  check_install.py
scripts/: dev.py  install_groups.py  release.py  sync_groups.py
scripts/tests/: test_basic.py
tests/: conftest.py  test_base.py  test_client.py  test_config.py
tests/examples/: test_examples_smoke.py
tests/integration/: base.py  conftest.py  test_alternative.py  test_batch.py  test_company.py  test_economics.py  test_fundamental.py  test_index.py  test_institutional.py  test_intelligence.py  test_investment.py  test_lc.py  test_market.py  test_sec.py  test_technical.py  test_transcripts.py
tests/test_alternative/: conftest.py  test_alternative_client.py
tests/test_bulk/: test_bulk_client.py  test_bulk_models.py
tests/test_company/: conftest.py  test_company_models.py
tests/test_economics/: conftest.py  test_economics_models.py
tests/test_fundamental/: conftest.py  test_fundamental_client.py  test_fundamental_models.py
tests/test_institutional/: test_institutional_client.py  test_institutional_models.py
tests/test_market/: test_market_client.py
tests/unit/: conftest.py  test_alternative.py  test_alternative_coverage.py  test_async_clients.py  test_base.py  test_base_async.py  test_base_coverage.py  test_batch.py  test_bulk.py  test_cassette_contracts.py  test_client.py  test_company.py  test_company_coverage.py  test_config.py  test_economics.py  test_exceptions.py  test_fundamental.py  test_index.py  test_institutional.py  test_intelligence.py  test_investment.py  test_logger.py  test_market.py  test_mcp.py  test_mcp_cli.py  test_models.py  test_rate_limit.py  test_rate_limit_async.py  test_sec.py  test_technical.py  test_transcripts.py  test_vcr_sanitization.py
tests/unit/lc/: conftest.py  test_embedding.py  test_imports.py  test_manager.py  test_mapping.py  test_registry.py  test_setup.py  test_utils.py  test_validation.py  test_vector_store.py
tests/unit/test_alternative/: test_alternative_models.py
tests/unit/test_bulk/: conftest.py
tests/unit/test_company/: test_company_client.py
tests/unit/test_economics/: test_economics_client.py  test_economics_models.py
(+3 files in other folders)
