[build-system]
requires = [
    "poetry-core>=1.8.0",
    "poetry-dynamic-versioning>=1.4.1,<2.0.0",
]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry]
name = "fmp-data"
version = "0.0.0"
description = "Python client for the Financial Modeling Prep API"
authors = ["Mehdi Zare <mehdizare@users.noreply.github.com>"]
maintainers = ["Mehdi Zare <mehdizare@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/MehdiZare/fmp-data"
repository = "https://github.com/MehdiZare/fmp-data"
documentation = "https://github.com/MehdiZare/fmp-data/tree/main/docs"
keywords = [
    "fmp",
    "financial",
    "api",
    "stocks",
    "market-data",
    "stock market",
    "financial data",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: AsyncIO",
    "Topic :: Office/Business :: Financial",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
packages = [
    { include = "fmp_data" },
]
include = [
    "fmp_data/py.typed",
]

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.28.1"
pydantic = "^2.11.7"
pydantic-settings = "^2.6.0"
python-dotenv = "^1.1.1"
tenacity = "^9.0.0"
tqdm = "^4.66.5"
cachetools = "^6.1.0"
structlog = "^25.4.0"
pandas = "^2.3.0"

[tool.poetry.group.langchain]
optional = true

[tool.poetry.group.langchain.dependencies]
faiss-cpu = "^1.11.0"
langchain-core = "^0.3.66"
langchain-community = "^0.3.26"
langchain-openai = "^0.3.25"
langgraph = "^0.4.10"
openai = "^1.92.0"
tiktoken = "^0.9.0"

[tool.poetry.group.mcp]
optional = true

[tool.poetry.group.mcp.dependencies]
mcp = {extras = ["cli"], version = "^1.0.0"}
pyyaml = "^6.0.1"

[tool.poetry.group.dev.dependencies]
poetry-dynamic-versioning = "^1.4.1"
ruff = "^0.12.2"
black = "^24.10.0"
mypy = "^1.13.0"
types-cachetools = "^6.0.0.20250525"
bandit = {extras = ["toml"], version = "^1.7.10"}
pip-audit = "^2.7.0"
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
pytest-cov = "^6.0.0"
pytest-mock = "^3.14.0"
freezegun = "^1.5.1"
responses = "^0.25.3"
vcrpy = "^6.0.2"
coverage = "^7.6.4"
pre-commit = "^4.0.1"
rich = "^13.9.3"
twine = "^5.1.1"
nox = "^2024.4.15"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.1"
mkdocs-material = "^9.6.14"
mkdocstrings-python = "^1.16.12"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"
format-jinja = "{%- if distance == 0 -%}\n{{ base }}\n{%- else -%}\n{{ base }}.post{{ distance }}\n{%- endif -%}\n"

[tool.poetry-dynamic-versioning.substitution]
files = [
    "fmp_data/__init__.py",
]

[tool.black]
line-length = 88
target-version = [
    "py310",
    "py311",
    "py312",
    "py313",
]
include = "\\.pyi?$"

[tool.ruff]
target-version = "py310"
line-length = 88
extend-exclude = [
    ".git",
    ".mypy_cache",
    ".nox",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    "__pycache__",
    "build",
    "dist",
]

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "C",
    "B",
    "S",
    "UP",
    "RUF",
]
ignore = [
    "S101",
    "S603",
    "S607",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "S101",
    "S106",
    "S107",
]
"scripts/*" = [
    "S603",
    "S607",
]
"**/conftest.py" = [
    "S101",
]
"__init__.py" = [
    "F401",
]
"noxfile.py" = [
    "S603",
    "S607",
]

[tool.ruff.lint.isort]
known-first-party = [
    "fmp_data",
]
force-sort-within-sections = true

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_optional = true
show_error_codes = true
disable_error_code = [
    "type-arg",
]
exclude = [
    "tests/",
    "examples/",
    "scripts/",
    "build/",
    "dist/",
]
plugins = [
    "pydantic.mypy",
]

[[tool.mypy.overrides]]
module = [
    "langchain.*",
    "langchain_core.*",
    "langchain_community.*",
    "langchain_openai.*",
    "langchain.embeddings.*",
    "langchain.tools.*",
    "faiss.*",
    "faiss",
    "mcp.*",
    "mcp.server.*",
    "tiktoken.*",
    "tiktoken",
    "openai.*",
    "openai",
    "yaml.*",
    "yaml",
    "rich.*",
    "tqdm.*",
    "pandas.*",
    "responses.*",
    "freezegun.*",
    "structlog.*",
    "tenacity.*",
    "tenacity",
    "fmp_data._version",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "fmp_data.__init__"
disable_error_code = [
    "import-untyped",
    "no-any-return",
    "attr-defined",
]

[[tool.mypy.overrides]]
module = [
    "fmp_data.lc.*",
    "fmp_data.mcp.*",
]
ignore_missing_imports = true
disable_error_code = [
    "import-untyped",
    "import-not-found",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
    "--quiet",
    "--no-header",
    "--tb=short",
    "-v",
    "--disable-warnings",
    "--strict-markers",
    "--strict-config",
]
testpaths = [
    "tests",
]
python_files = [
    "test_*.py",
    "*_test.py",
]
python_functions = [
    "test_*",
]
python_classes = [
    "Test*",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
    "ignore::PendingDeprecationWarning",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "asyncio: marks tests as asyncio tests",
]

[tool.coverage.run]
source = [
    "fmp_data",
]
branch = true
parallel = true
data_file = ".coverage"
omit = [
    "fmp_data/endpoints/definitions.py",
    "fmp_data/example.py",
    "fmp_data/_version.py",
    "*/__init__.py",
    "tests/*",
    "*/tests/*",
    "setup.py",
    "noxfile.py",
    "scripts/*",
    "*/mapping.py",
    "*/schema.py",
    "*/hints.py",
    "*/endpoints.py",
    "fmp_data/lc/*",
    "fmp_data/mcp/*",
]

[tool.coverage.paths]
source = [
    "fmp_data/",
    "*/site-packages/fmp_data/",
    "*/.venv/lib/python*/site-packages/fmp_data/",
    "*/.venv/lib/*/site-packages/fmp_data/",
    "*/.nox/*/lib/python*/site-packages/fmp_data/",
    "*/.nox/*/site-packages/fmp_data/",
]

[tool.coverage.combine]
skip_empty = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    "raise NotImplementedError",
    "if __name__ == ['\"]__main__['\"]:",
    "if TYPE_CHECKING:",
    "pass",
    "raise ImportError",
    "except ImportError",
    "def main():",
    "class .*\\(Protocol\\):",
    "@abstractmethod",
]
show_missing = true
fail_under = 80
precision = 2
skip_covered = false
skip_empty = false
sort = "Cover"

[tool.coverage.html]
directory = "htmlcov"
show_contexts = true

[tool.coverage.xml]
output = "coverage.xml"

[tool.bandit]
exclude_dirs = [
    "tests",
    "scripts",
    ".nox",
    ".venv",
    "build",
    "dist",
]
skips = [
    "B101",
    "B404",
    "B603",
    "B607",
    "B608",
]

[tool.bandit.assert_used]
skips = [
    "*/test_*.py",
    "*/tests/*",
]
